--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -4,6 +4,20 @@
   margin: 12px 0;
   color: #fff;
   border-radius: 5px;
+  display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.conteudo-item {
+  cursor: pointer;
+}
+
+.removeTarefa {
+  background-color: #32343d;
+  border: none;
+  color: #3498db;
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
 }
