ajustes no botao e no bloco de detalhes

--- a/src/components/DetalhesTarefa/DetalhesTarefa.css
+++ b/src/components/DetalhesTarefa/DetalhesTarefa.css
@@ -1,3 +1,9 @@
+.conteudoDetalhesTarefa {
+  background-color: #32343d;
+  padding: 10px 15px;
+  border-radius: 10px;
+}
+
 .conteudoDetalhesTarefa p {
   color: #fff;
   line-height: 1.5em;
